<resources>
    <string name="app_name">TesAplication</string>
    <string name="name">name</string>
    <string name="email_user">Email User</string>
    <string name="phone_user">Phone User</string>
    <string name="city_user">City User</string>
    <string name="address_user">Address User</string>
    <string name="home">List User</string>
    <string name="add_user">Add User</string>
    <string name="search">Search With Name User</string>
    <string name="user_not_found">User Not Found</string>
    <string name="full_name">Full Name</string>
    <string name="input_full_name">Input Full Name</string>
    <string name="input_email">Input Email</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="input_phone_number">Input Phone Number</string>
    <string name="input_address">Input Address</string>
</resources>