<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyt_header"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:elevation="0dp"
            android:background="@color/colorPrimaryVariant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/ic_left_arrow"
                    app:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_user"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                app:layout_constraintLeft_toRightOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="@id/btn_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/lyt_header"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lyt_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageView
                        android:id="@+id/img_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_user"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:tint="@color/colorPrimary" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:id="@+id/lyt_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/lyt_image">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="8dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:text="@string/full_name"
                            android:textColor="#000"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="none"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_fullname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittext_focus_not_focus"
                                android:inputType="text"
                                android:textColorHint="#c5c5c5"
                                android:paddingHorizontal="12dp"
                                android:hint="@string/input_full_name"
                                android:paddingVertical="15dp"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:paddingBottom="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintLeft_toLeftOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="none"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittext_focus_not_focus"
                                android:paddingHorizontal="12dp"
                                android:textColorHint="#c5c5c5"
                                android:inputType="textEmailAddress"
                                android:hint="@string/input_email"
                                android:paddingVertical="15dp"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:paddingBottom="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintLeft_toLeftOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="none"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_phonenumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittext_focus_not_focus"
                                android:paddingHorizontal="12dp"
                                android:textColorHint="#c5c5c5"
                                android:inputType="number"
                                android:hint="@string/input_phone_number"
                                android:paddingVertical="15dp"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="City"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:paddingBottom="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintLeft_toLeftOf="parent" />

                        <Spinner
                            android:id="@+id/spnnr_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background_shape_spinner"
                            android:paddingVertical="10dp"
                            android:spinnerMode="dialog"
                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Address"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:paddingBottom="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintLeft_toLeftOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxBackgroundMode="none"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittext_focus_not_focus"
                                android:paddingHorizontal="12dp"
                                android:textColorHint="#c5c5c5"
                                android:inputType="text"
                                android:hint="@string/input_address"
                                android:paddingVertical="15dp"/>
                        </com.google.android.material.textfield.TextInputLayout>



                    </LinearLayout>

                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    app:layout_constraintTop_toBottomOf="@id/lyt_input"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:cardElevation="0dp"
                    app:layout_constraintVertical_bias="1"
                    app:cardCornerRadius="30dp"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="12dp"
                        android:background="@drawable/shape_button"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Simpan"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="#fff"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="4dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>



                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>