<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/crd_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_user"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/txt_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/img_user"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_moreinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_expanded="false">

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/container_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <ImageView
                            android:id="@+id/img_email"
                            android:layout_width="40dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_email"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/colorPrimary"/>
                        <TextView
                            android:id="@+id/txt_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toRightOf="@id/img_email"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/email_user"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/container_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        >

                        <ImageView
                            android:id="@+id/img_phone"
                            android:layout_width="40dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_phone"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/colorPrimary"/>
                        <TextView
                            android:id="@+id/txt_phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toRightOf="@id/img_phone"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/phone_user"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/container_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        >

                        <ImageView
                            android:id="@+id/img_city"
                            android:layout_width="40dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_city"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/colorPrimary"/>
                        <TextView
                            android:id="@+id/txt_city"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toRightOf="@id/img_city"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/city_user"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/container_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        >

                        <ImageView
                            android:id="@+id/img_address"
                            android:layout_width="40dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_address"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/colorPrimary"/>
                        <TextView
                            android:id="@+id/txt_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toRightOf="@id/img_address"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/address_user"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </net.cachapa.expandablelayout.ExpandableLayout>


        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>